--- a/index.html
+++ b/index.html
@@ -996,7 +996,7 @@
       <div class="products-grid">
         <div class="product-card" data-name="Short Polo" data-brand="polo">
           <div class="product-image-wrapper">
-            <img src="short 1.jpg" alt="Short Polo" class="product-image">
+            <img src="short 1.JPG" alt="Short Polo" class="product-image">
           </div>
           <div class="product-info">
             <div class="product-category">Shorts Linho</div>
@@ -1013,7 +1013,7 @@
         <div class="product-card" data-name="Short Polo" data-brand="polo">
           <div class="product-image-wrapper">
             <span class="product-badge premium">Novidade</span>
-            <img src="short 2.jpg" alt="Short Polo" class="product-image">
+            <img src="short 2.JPG" alt="Short Polo" class="product-image">
           </div>
           <div class="product-info">
             <div class="product-category">Shorts Linho</div>
@@ -1029,7 +1029,7 @@
 
          <div class="product-card" data-name="Short Polo" data-brand="polo">
           <div class="product-image-wrapper">
-            <img src="short 3.jpg" alt="Short Polo" class="product-image">
+            <img src="short 3.JPG" alt="Short Polo" class="product-image">
           </div>
           <div class="product-info">
             <div class="product-category">Shorts Linho</div>
@@ -1046,7 +1046,7 @@
         <div class="product-card" data-name="Short Reserva" data-brand="reserva">
           <div class="product-image-wrapper">
             <span class="product-badge premium">Destaque</span>
-            <img src="short 4.jpg" alt="Short Reserva" class="product-image">
+            <img src="short 4.JPG" alt="Short Reserva" class="product-image">
           </div>
           <div class="product-info">
             <div class="product-category">Shorts Linho</div>
@@ -1062,7 +1062,7 @@
 
         <div class="product-card" data-name="Short Reserva" data-brand="reserva">
           <div class="product-image-wrapper">
-            <img src="short 5.jpg" alt="Short Reserva" class="product-image">
+            <img src="short 5.JPG" alt="Short Reserva" class="product-image">
           </div>
           <div class="product-info">
             <div class="product-category">Shorts Linho</div>
@@ -1078,7 +1078,7 @@
 
         <div class="product-card" data-name="Short Reserva" data-brand="reserva">
           <div class="product-image-wrapper">
-            <img src="short 6.jpg" alt="Short Reserva" class="product-image">
+            <img src="short 6.JPG" alt="Short Reserva" class="product-image">
           </div>
           <div class="product-info">
             <div class="product-category">Shorts Linho</div>
@@ -1095,7 +1095,7 @@
         <div class="product-card" data-name="Short Reserva" data-brand="reserva">
           <div class="product-image-wrapper">
             <span class="product-badge premium">Premium</span>
-            <img src="short 7.jpg" alt="Short Reserva" class="product-image">
+            <img src="short 7.JPG" alt="Short Reserva" class="product-image">
           </div>
           <div class="product-info">
             <div class="product-category">Shorts Linho</div>
@@ -1112,7 +1112,7 @@
         <div class="product-card" data-name="Short Reserva" data-brand="reserva">
           <div class="product-image-wrapper">
             <span class="product-badge premium">Premium</span>
-            <img src="short 8.jpg" alt="Short Reserva" class="product-image">
+            <img src="short 8.JPG" alt="Short Reserva" class="product-image">
           </div>
           <div class="product-info">
             <div class="product-category">Shorts Linho</div>
@@ -1126,33 +1126,17 @@
           </div>
         </div>
 
-        <div class="product-card" data-name="Short Reserva" data-brand="reserva">
-          <div class="product-image-wrapper">
-            <span class="product-badge premium">Premium</span>
-            <img src="short 8.jpg" alt="Short Reserva" class="product-image">
-          </div>
-          <div class="product-info">
-            <div class="product-category">Shorts Linho</div>
-            <h3 class="product-name">Short Reserva</h3>
-            <p class="product-description">Leveza que surpreende.</p>
-            <div class="product-footer">
-              <button class="contact-btn" onclick="contactWhatsApp('Short Reserva linho cinza')">
-                <i class="fab fa-whatsapp"></i> Pedir
-              </button>
-            </div>
-          </div>
-        </div>
 
         <div class="product-card" data-name="Short TOMMY" data-brand="tommy">
           <div class="product-image-wrapper">
-            <img src="short 8.jpg" alt="Short TOMMY" class="product-image">
+            <img src="short 9.jpg" alt="Short TOMMY" class="product-image">
           </div>
           <div class="product-info">
             <div class="product-category">Shorts Linho</div>
             <h3 class="product-name">Short TOMMY</h3>
             <p class="product-description">Essencial para o dia a dia.</p>
             <div class="product-footer">
-              <button class="contact-btn" onclick="contactWhatsApp('Short linho bege')">
+              <button class="contact-btn" onclick="contactWhatsApp('Short TOMMY linho bege')">
                 <i class="fab fa-whatsapp"></i> Pedir
               </button>
             </div>
@@ -1161,7 +1145,7 @@
 
         <div class="product-card" data-name="Short TOMMY" data-brand="tommy">
           <div class="product-image-wrapper">
-            <img src="short 9.jpg" alt="Short TOMMY" class="product-image">
+            <img src="short 10.jpg" alt="Short TOMMY" class="product-image">
           </div>
           <div class="product-info">
             <div class="product-category">Shorts Linho</div>
@@ -1177,7 +1161,7 @@
 
         <div class="product-card" data-name="Short TOMMY" data-brand="tommy">
           <div class="product-image-wrapper">
-            <img src="short 10.jpg" alt="Short TOMMY" class="product-image">
+            <img src="short 11.JPG" alt="Short TOMMY" class="product-image">
           </div>
           <div class="product-info">
             <div class="product-category">Shorts Linho</div>
@@ -1191,25 +1175,10 @@
           </div>
         </div>
 
-        <div class="product-card" data-name="Short TOMMY" data-brand="tommy">
-          <div class="product-image-wrapper">
-            <img src="short 11.jpg" alt="Short TOMMY" class="product-image">
-          </div>
-          <div class="product-info">
-            <div class="product-category">Shorts Linho</div>
-            <h3 class="product-name">Short TOMMY</h3>
-            <p class="product-description">Combina com tudo.</p>
-            <div class="product-footer">
-              <button class="contact-btn" onclick="contactWhatsApp('Short TOMMY linho preto')">
-                <i class="fab fa-whatsapp"></i> Pedir
-              </button>
-            </div>
-          </div>
-        </div>
 
         <div class="product-card" data-name="Short TOMMY" data-brand="tommy">
           <div class="product-image-wrapper">
-            <img src="short 12.jpg" alt="Short TOMMY" class="product-image">
+            <img src="short 12.JPG" alt="Short TOMMY" class="product-image">
           </div>
           <div class="product-info">
             <div class="product-category">Shorts Linho</div>
@@ -1226,7 +1195,7 @@
         <div class="product-card" data-name="Short Reserva" data-brand="reserva">
           <div class="product-image-wrapper">
             <span class="product-badge premium">Premium</span>
-            <img src="short 13.jpg" alt="Short Reserva" class="product-image">
+            <img src="short 13.JPG" alt="Short Reserva" class="product-image">
           </div>
           <div class="product-info">
             <div class="product-category">Shorts Linho</div>
@@ -1242,7 +1211,7 @@
 
         <div class="product-card" data-name="Short Polo" data-brand="polo">
           <div class="product-image-wrapper">
-            <img src="short 14.jpg" alt="Short Polo" class="product-image">
+            <img src="short 14.JPG" alt="Short Polo" class="product-image">
           </div>
           <div class="product-info">
             <div class="product-category">Shorts Peruano</div>
@@ -1258,7 +1227,7 @@
 
         <div class="product-card" data-name="Short BOSS" data-brand="boss">
           <div class="product-image-wrapper">
-            <img src="short 15.jpg" alt="Short BOSS" class="product-image">
+            <img src="short 15.JPG" alt="Short BOSS" class="product-image">
           </div>
           <div class="product-info">
             <div class="product-category">Shorts Peruano</div>
@@ -1274,7 +1243,7 @@
 
         <div class="product-card" data-name="Short BOSS" data-brand="boss">
           <div class="product-image-wrapper">
-            <img src="short 16.jpg" alt="Short BOSS" class="product-image">
+            <img src="short 16.JPG" alt="Short BOSS" class="product-image">
           </div>
           <div class="product-info">
             <div class="product-category">Shorts Peruano</div>
@@ -1290,7 +1259,7 @@
 
         <div class="product-card" data-name="Short Diesel" data-brand="diesel">
           <div class="product-image-wrapper">
-            <img src="short 17.jpg" alt="Short Diesel" class="product-image">
+            <img src="short 17.JPG" alt="Short Diesel" class="product-image">
           </div>
           <div class="product-info">
             <div class="product-category">Shorts Peruano</div>
@@ -1306,7 +1275,7 @@
 
         <div class="product-card" data-name="Short Diesel" data-brand="diesel">
           <div class="product-image-wrapper">
-            <img src="short 18.jpg" alt="Short Diesel" class="product-image">
+            <img src="short 18.JPG" alt="Short Diesel" class="product-image">
           </div>
           <div class="product-info">
             <div class="product-category">Shorts Peruano</div>
@@ -1322,7 +1291,7 @@
 
         <div class="product-card" data-name="Short Diesel" data-brand="diesel">
           <div class="product-image-wrapper">
-            <img src="short 19.jpg" alt="Short Diesel" class="product-image">
+            <img src="short 19.JPG" alt="Short Diesel" class="product-image">
           </div>
           <div class="product-info">
             <div class="product-category">Shorts Peruano</div>
@@ -1338,7 +1307,7 @@
 
         <div class="product-card" data-name="Short Diesel" data-brand="diesel">
           <div class="product-image-wrapper">
-            <img src="short 20.jpg" alt="Short Diesel" class="product-image">
+            <img src="short 20.JPG" alt="Short Diesel" class="product-image">
           </div>
           <div class="product-info">
             <div class="product-category">Shorts Peruano</div>
@@ -1354,7 +1323,7 @@
 
         <div class="product-card" data-name="Short TOMMY" data-brand="tommy">
           <div class="product-image-wrapper">
-            <img src="short 21.jpg" alt="Short TOMMY" class="product-image">
+            <img src="short 21.JPG" alt="Short TOMMY" class="product-image">
           </div>
           <div class="product-info">
             <div class="product-category">Shorts Peruano</div>
@@ -1370,7 +1339,7 @@
 
         <div class="product-card" data-name="Short TOMMY" data-brand="tommy">
           <div class="product-image-wrapper">
-            <img src="short 22.jpg" alt="Short TOMMY" class="product-image">
+            <img src="short 22.JPG" alt="Short TOMMY" class="product-image">
           </div>
           <div class="product-info">
             <div class="product-category">Shorts Peruano</div>
@@ -1386,7 +1355,7 @@
 
         <div class="product-card" data-name="Short Emporio Armani" data-brand="emporio armani">
           <div class="product-image-wrapper">
-            <img src="short 23.jpg" alt="Short Emporio Armani" class="product-image">
+            <img src="short 23.JPG" alt="Short Emporio Armani" class="product-image">
           </div>
           <div class="product-info">
             <div class="product-category">Shorts Peruano</div>
@@ -1402,7 +1371,7 @@
 
         <div class="product-card" data-name="Short BOSS" data-brand="boss">
           <div class="product-image-wrapper">
-            <img src="short 24.jpg" alt="Short BOSS" class="product-image">
+            <img src="short 24.JPG" alt="Short BOSS" class="product-image">
           </div>
           <div class="product-info">
             <div class="product-category">Shorts Peruano</div>
