--- a/index.html
+++ b/index.html
@@ -1129,7 +1129,7 @@
 
         <div class="product-card" data-name="Short TOMMY" data-brand="tommy">
           <div class="product-image-wrapper">
-            <img src="short 9.jpg" alt="Short TOMMY" class="product-image">
+            <img src="short 9.JPG" alt="Short TOMMY" class="product-image">
           </div>
           <div class="product-info">
             <div class="product-category">Shorts Linho</div>
@@ -1145,7 +1145,7 @@
 
         <div class="product-card" data-name="Short TOMMY" data-brand="tommy">
           <div class="product-image-wrapper">
-            <img src="short 10.jpg" alt="Short TOMMY" class="product-image">
+            <img src="short 10.JPG" alt="Short TOMMY" class="product-image">
           </div>
           <div class="product-info">
             <div class="product-category">Shorts Linho</div>
@@ -1575,3 +1575,4 @@
   </script>
 </body>
 </html>
+
